# MARA

./: .env.example  .gitignore  README.md  ROADMAP.md  mara_eval_pipeline.md  pyproject.toml
mara/: config.py  logging.py  report_store.py  verifier.py
mara/agent/: graph.py  llm.py  run_context.py  state.py
mara/agent/edges/: routing.py
mara/agent/nodes/: certified_output.py  claim_extractor.py  confidence_scorer.py  corrective_retriever.py  hitl_checkpoint.py  merkle_builder.py  query_planner.py  report_synthesizer.py  retriever.py  source_hasher.py
mara/agent/nodes/search_worker/: arxiv_search.py  brave_search.py  firecrawl_scrape.py  (+3 more)
mara/cli/: run.py
mara/confidence/: embeddings.py  scorer.py  signals.py
mara/db/: __init__.py  repository.py  schema.sql  sqlite_repository.py
mara/prompts/: claim_extractor.py  corrective_retriever.py  lsa_scorer.py  query_planner.py  report_synthesizer.py
tests/: conftest.py  test_config.py  test_logging.py  test_report_store.py  test_verifier.py
tests/agent/: test_graph.py  test_llm.py  test_state.py
tests/agent/edges/: test_routing.py
tests/agent/nodes/: test_certified_output.py  test_claim_extractor.py  test_confidence_scorer.py  test_corrective_retriever.py  test_hitl_checkpoint.py  test_merkle_builder.py  test_query_planner.py  test_report_synthesizer.py  test_retriever.py  test_source_hasher.py
tests/cli/: test_run.py  test_verify.py
tests/confidence/: test_embeddings.py  test_scorer.py  test_signals.py
tests/db/: test_sqlite_repository.py
tests/merkle/: test_hasher.py  test_proof.py  test_tree.py
(+7 files in other folders)
