[project]
name = "mara"
version = "0.1.0"
description = "Merkle-Anchored Research Agent — cryptographically verifiable, hallucination-resistant research"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-huggingface>=0.1",
    "langsmith>=0.2",
    "sentence-transformers>=3.0",
    "firecrawl-py>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
mara = "mara.cli.run:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mara = ["db/*.sql", "db/migrations/*.sql"]

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
]
dev = [
    {include-group = "test"},
    "ruff",
]
api = [
    "fastapi[standard]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mara --cov-report=term-missing --cov-fail-under=98"

[tool.coverage.run]
branch = true
source = ["mara"]
omit = [
    "mara/prompts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
